[package]
name = "bamboo-core"
version = "0.1.1"
edition = "2024"

description = "Vietnamese input method engine written in Rust"
license = "MIT"
repository = "https://github.com/nguyen10t2/bamboo_core"
documentation = "https://docs.rs/bamboo-core"
readme = "README.md"

keywords = ["vietnamese", "ime", "input-method", "telex", "unicode"]
categories = ["text-processing"]

include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
bitflags = "2.11.1"
phf = { version = "0.13.1", features = ["macros"] }
